export type RootStackParamList = {
  Login: undefined;
  Home: undefined;
  Mastering: { fileId: string };
  History: undefined;
  Profile: undefined;
  Results: { fileId: string };
  Subscriptions: undefined;
...
